# Bounce

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  Makefile  README.md
.github/workflows/: cmake-single-platform.yml
src/: box.cpp  box.hpp  main.cpp  window.cpp  window.hpp
